--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,12 @@ footer {
   display: block;
 }
 
+.error-message {
+  color: red;
+  text-align: center;
+  font-weight: bold;
+}
+
 .form-area {
   display: flex;
   flex-direction: column;
