--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
 /* Base CSS Data */
 
-html, body {
+html,
+body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  background-color: #F7F8F7;
+  font-family: "Montserrat", sans-serif;
+  background-color: #f7f8f7;
   color: #000000;
   user-select: none;
 }
 
-h1, p {
+h1,
+p {
   margin: 0;
 }
 
@@ -37,33 +39,31 @@ button {
 }
 
 button:disabled {
-  background-color: #D7DAD8;
+  background-color: #d7dad8;
   color: #000000;
   cursor: not-allowed;
 }
 
 .primary {
-  background-color: #3A383D;
-  color: #D7DAD8;
+  background-color: #3a383d;
+  color: #d7dad8;
 }
 
 .secondary {
-  background-color: #D7DAD8;
+  background-color: #d7dad8;
   color: #000000;
 }
 
 .primary:hover,
-.primary:focus
-.primary:active {
-  background-color: #D7DAD8;
+.primary:focus .primary:active {
+  background-color: #d7dad8;
   color: #000000;
 }
 
 .secondary:hover,
-.secondary:focus
-.secondary:active {
-  background-color: #3A383D;
-  color: #D7DAD8;
+.secondary:focus .secondary:active {
+  background-color: #3a383d;
+  color: #d7dad8;
 }
 
 /* Footer CSS Data */
@@ -94,7 +94,7 @@ footer {
 }
 
 .link {
-  color: #3A383D;
+  color: #3a383d;
   font-weight: 600;
   cursor: pointer;
 }
@@ -140,7 +140,7 @@ footer {
 .main-area {
   display: flex;
   justify-content: space-between;
-} 
+}
 
 /* Side Bar */
 
@@ -200,7 +200,6 @@ footer {
   font-family: "Montserrat", sans-serif;
 }
 
-
 .search-btn {
   padding: 15px;
   margin-right: 10px;
@@ -259,7 +258,6 @@ footer {
 
 .username {
   font-weight: 200;
-  
 }
 
 /* Feed area */
@@ -272,20 +270,20 @@ footer {
 .profile-pic {
   height: 4em;
   grid-area: profile-pic;
+  border-radius: 10px;
 }
 
 .post-box {
   display: grid;
-  grid-template: 
-  "profile-pic post-input-form post-input-form"
-  "profile-pic post-input-form post-input-form"
-  "profile-pic action-items action-items";
+  grid-template:
+    "profile-pic post-input-form post-input-form"
+    "profile-pic post-input-form post-input-form"
+    "profile-pic action-items action-items";
 }
 
 .post-box > img {
   padding-top: 5px;
   margin-right: 10px;
-  border-radius: 10px;
 }
 
 .post-input-form {
@@ -315,6 +313,45 @@ footer {
 
 #user-upload-img {
   display: none;
+}
+
+.post-area {
+  background-color: red;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.post {
+  background-color: whitesmoke;
+  border: 1px solid black;
+  margin: 10px auto 0;
+}
+
+.user-data-post {
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.user-posted-image {
+  margin-top: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.user-interaction-area {
+  display: flex;
+  gap: 1em;
+}
+
+.user-interaction-area > .icon {
+  height: 2em;
+  width: 2em;
+  background-color: red;
+}
+
+.user-interaction-area > .icon:last-child {
+  margin-left: auto;
 }
 
 @media only screen and (max-width: 500px) {
@@ -391,6 +428,11 @@ footer {
     margin-left: 10px;
     gap: 2em;
   }
+
+  .post-area {
+    background-color: red;
+    height: 100vh;
+  }
 }
 
 /* @media only screen and (max-width: 700px) {
@@ -421,9 +463,10 @@ footer {
     height: 3em;
   }
 
-  .main-area:last-child {
-    justify-content: flex-start;
-  }
+  /* .main-area:first-child {
+    display: flex;
+    justify-content: center;
+  } */
 }
 
 @media only screen and (max-width: 1200px) {
